# junkyard

./: .env  .gitignore  2  CONCURRENT_LIMIT  Cargo.toml  README.md  run-wasm.sh  run-webapp.sh
crates/junk/: Cargo.toml
crates/junk-cache/: Cargo.toml
crates/junk-client/: Cargo.toml  index.html
crates/junk-client/src/: lib.rs
crates/junk-etl/: Cargo.toml
crates/junk-etl/migrations/: 000_schemas_init.sql  001_common_init.sql  100_stock_init.sql  901_api_stock.sql
crates/junk-etl/src/: lib.rs  tui.rs  util.rs
crates/junk-etl/src/schemas/: mod.rs
crates/junk-etl/src/schemas/crypto/: mod.rs
crates/junk-etl/src/schemas/crypto/brokers/: binance.rs  broker.rs  common.rs  exchange.rs  mod.rs  tests.rs
crates/junk-scraper/: Cargo.toml
crates/junk-scraper/src/: lib.rs
crates/junk-scraper/src/crypto/: README.md  binance.rs  mod.rs
crates/junk-scraper/src/stocks/: README.md
crates/junk-server/: Cargo.toml  eg.sql
crates/junk-server/src/: handlers.rs  main.rs  rest_api.rs
crates/junk-server/src/rest_api/: mod.rs  stock.rs
crates/junk-server/src/rest_api/stock/: mod.rs
crates/junk-server/static/: pallette.css  stylesheet.css
crates/junk-server/templates/: home.html  login.html  stock_dashboard.html
crates/junk-spider/: Cargo.toml  README.md
crates/junk-spider/benches/: stock_prices.rs
crates/junk-spider/ext_sql/: stock_delete_inferred_metrics.sql  stock_infer_quarterly_metrics.sql
crates/junk-spider/migrations/: 001_common_init.sql  100_stock_init.sql  101_stock_prices.sql  102_stock_std_financials.sql  200_crypto_init.sql  901_api_stock.sql
crates/junk-spider/sql/: 01_schemas.sql  02_tbls.sql  03_views.sql  04_stock_metrics.sql  05_std_financials.sql  06_submissions.sql  notepad.sql
crates/junk-spider/src/: api.rs  fs.rs  key_tracker.rs  lib.rs  tui.rs
crates/junk-spider/src/crypto/: binance.rs  kraken.rs  kucoin.rs  mexc.rs  mod.rs  sql.rs
crates/junk-spider/src/econ/: fred.rs  mod.rs  sql.rs
crates/junk-spider/src/stock/: common.rs  mod.rs  sec.rs  sec_metrics.rs  sec_metrics_transform.rs  sec_submissions.rs  sec_tickers.rs  sql.rs  yahoo_finance.rs
crates/junk-spider/src/stock/sec/: bulks.rs  metrics.rs  mod.rs  tickers.rs
crates/junk-spider/tests/: scrape_metrics.rs  scrape_prices.rs  select.rs
crates/junk-spider/tests/files/: metrics.json  prices.json
crates/junk-tui/: Cargo.toml
crates/junk-tui/src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  pages.rs  tui.rs  ui.rs
crates/junk-web/: Cargo.toml
crates/junk-webapp/: Cargo.toml
crates/junk-webapp/src/: main.rs  rest_api.rs
crates/junk-webapp/static/: stylesheet.css
crates/junk-webapp/static/js/: balance-sheet-charts.js  charts.js  dashboard.js  search.js  tab-fix.js
crates/junk-webapp/templates/: base.html  home.html  stock.html
crates/junk/src/: cli.rs  main.rs  spider.rs
crates/jy/: Cargo.toml
crates/jy-cache/: Cargo.toml
crates/jy-scraper/: Cargo.toml
crates/jy-tui/: Cargo.toml
crates/jy-web/: Cargo.toml
db/: docker-compose.yml
