[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
anyhow = { version = "1" }
chrono = { version = "0.4" }
colored = { version = "2.2" }
console = { version = "0.15.10" }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
dialoguer = { version = "0.11" }
dotenv = { version = "0.15" }
futures = { version = "0.3" }
indicatif = { version = "0.17.9" }
num_cpus = { version = "1.16.0" }
rayon = { version = "1.10" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1.41" }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
