[package]
name = "junk-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono.workspace = true
colored = "2.2.0"
dotenv.workspace = true
futures.workspace = true
hmac = "0.12.1"
lazy_static = "1.5.0"
reqwest.workspace = true
serde.workspace = true
serde_json = "1.0.134"
sha2 = "0.10.8"
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
zip = "2.2.2"

[dev-dependencies]
criterion = "0.5.1"
rayon = "1.10.0"

[[bench]]
name = "junk-spider"
