[package]
name = "junk-spider"
version = "0.1.0"
edition = "2021"
description = "The junk webscraper"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono.workspace = true
colored.workspace = true
dialoguer.workspace = true
dotenv.workspace = true
futures.workspace = true
hmac = "0.12.1"
lazy_static = "1.5.0"
indicatif.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = "1.0.134"
sha2 = "0.10.8"
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
zip = "2.2.2"
deadpool-postgres = "0.14.1"
num_cpus.workspace = true

[dev-dependencies]
criterion = "0.5.1"

## Benchmarks
[[bench]]
name = "scrape_stocks"
path = "benches/scrape_stocks.rs"

[[bench]]
name = "scrape_metrics"
path = "benches/scrape_metrics.rs"
