[package]
name = "junk-spider"
version = "0.1.0"
edition = "2021"
description = "The junk webscraper"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono.workspace = true
colored.workspace = true
deadpool-postgres.workspace = true
dialoguer.workspace = true
dotenv.workspace = true
futures.workspace = true
hmac = "0.12.1"
lazy_static = "1.5.0"
indicatif.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
zip = "2.2.2"
num_cpus.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures"] }


## Benchmarks
[[bench]]
name = "stock_prices"
path = "benches/stock_prices.rs"
harness = false

[[bench]]
name = "stock_metrics"
path = "benches/stock_metrics.rs"
harness = false
