[package]
name = "junk-tui"
edition = "2021"
version.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dotenv.workspace = true
futures.workspace = true
ratatui = "0.29.0"
sqlx.workspace = true
tokio = { workspace = true, features = ["time"] }
